# claude-code-afk

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md
cli/: Cargo.toml
cli/src/: cmd.rs  config.rs  constants.rs  logger.rs  main.rs  models.rs
site/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  svelte.config.js
site/drizzle/: 0000_sleepy_exiles.sql  0001_spooky_wolfsbane.sql
site/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
site/src/: app.html  hooks.server.ts
site/src/lib/: utils.ts
site/src/lib/server/: push.ts
site/src/lib/server/db/: migrate.ts  schema.ts
site/src/routes/: +page.svelte  layout.css
site/src/routes/api/decision/[decisionId]/status/: +server.ts
site/src/routes/api/decision/[decisionId]/submit/: +server.ts
site/src/routes/api/notify/: +server.ts
site/src/routes/api/notify/simple/: +server.ts
site/src/routes/api/pairing/[pairingId]/status/: +server.ts
site/src/routes/api/pairing/[pairingToken]/complete/: +server.ts
site/src/routes/api/pairing/initiate/: +server.ts
site/src/routes/api/vapid-public-key/: +server.ts
site/src/routes/pair/[pairingToken]/: +page.server.ts  +page.svelte
site/static/: manifest.json  sw.js
