[package]
name = "claude-afk"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
confy = "0.6"
qrcode = "0.14"
nanoid = "0.4"

[dev-dependencies]
toml = "0.8"
