[package]
name = "claude-afk"
version = "0.1.0"
edition = "2021"
authors = ["JazzyMcJazz"]
description = "Push notifications to your phone when Claude Code needs your attention"
documentation = "https://github.com/JazzyMcJazz/claude-code-afk"
readme = "../README.md"
homepage = "https://github.com/JazzyMcJazz/claude-code-afk"
repository = "https://github.com/JazzyMcJazz/claude-code-afk"
license = "MIT"
keywords = ["claude", "notifications", "push-notifications", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/",
    "tests/",
]

[[bin]]
name = "claude-afk"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "3.1.4", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
confy = "2.0.0"
qrcode = "0.14"
nanoid = "0.4"
colored = "3.1.1"

[dev-dependencies]
toml = "0.8"
